ska skiva test snart

--- a/inlämningsuppgift_Alexander_sandberg_med_c++/inlämningsuppgift_Alexander_sandberg_med_c++.vcxproj.filters
+++ b/inlämningsuppgift_Alexander_sandberg_med_c++/inlämningsuppgift_Alexander_sandberg_med_c++.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClInclude Include="logik.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="inlämningsuppgift_Alexander_sandberg_med_c++.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
