--- a/inlämningsuppgift_Alexander_sandberg_med_c++/inlämningsuppgift_Alexander_sandberg_med_c++.vcxproj
+++ b/inlämningsuppgift_Alexander_sandberg_med_c++/inlämningsuppgift_Alexander_sandberg_med_c++.vcxproj
@@ -132,6 +132,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logik.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="inlämningsuppgift_Alexander_sandberg_med_c++.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
