kommer skiva tester snart

--- a/inlämningsuppgift_Alexander_sandberg_med_c++/inlämningsuppgift_Alexander_sandberg_med_c++.vcxproj
+++ b/inlämningsuppgift_Alexander_sandberg_med_c++/inlämningsuppgift_Alexander_sandberg_med_c++.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="inlämningsuppgift_Alexander_sandberg_med_c++.cpp" />
     <ClCompile Include="logik.cpp" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logik.h" />
